--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,9 +1,10 @@
-{{ $js := resources.Get "js/gallerydeluxe/cdn/index.js" }}
-{{ $js = $js | js.Build (dict "params" site.Params.gallerydeluxe "minify" hugo.IsProduction) }}
-{{ $styles := resources.Get "css/gallerydeluxe/styles.css" }}
+
+{{ $css := resources.Get "css/styles.css" }}
 {{ if hugo.IsProduction}}
-    {{ $js = $js | fingerprint }}
-    {{ $styles = $styles | minify | fingerprint }}
+    {{ $css = $css | minify | fingerprint }}
 {{ end }}
-<script src="{{ $js.RelPermalink }}" defer></script>
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}"></link>
+<link rel="stylesheet" href="{{ $css.RelPermalink }}"></link>
+{{ with site.Params.plausible_domain }}
+<script defer data-domain="{{ . }}" src="https://plausible.io/js/plausible.js"></script>
+{{ end }}
+
